[BUG #8091] Some qx.Mobile page transitions flicker on devices with weak hardware * Reapplied vbox layout on page * Added a default zIndex to not animated, active page

--- a/framework/source/resource/qx/mobile/scss/ui/_main.scss
+++ b/framework/source/resource/qx/mobile/scss/ui/_main.scss
@@ -14,8 +14,8 @@
   width:100%;
 }
 
-.page.active {
-  z-index: 1;
+.page.active:not(.animationChild) {
+  z-index: 100;
 }
 
 .content:not(.group) .form-title {
